--- a/ubicacion.html
+++ b/ubicacion.html
@@ -14,7 +14,7 @@
 <body>
     <div class="banner">
         <div class="navar" id="navbar">
-            <img src="fotos/logoplacas.jpg" class="logo">
+            <img src="Fotos/logoplacas.jpg" class="logo">
             <ul class="menu" id="menuu">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="galeria.html">Galería</a></li>
