--- a/galeria.html
+++ b/galeria.html
@@ -67,7 +67,7 @@
           </div>
     </div>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <a href="https://api.whatsapp.com/send?phone=541169738740&text=Hola,%20quisiera%20información%20sobre%20Placas%20At%C3%A9rmicas%20KT." class="float" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=541169738740"class="float" target="_blank">
     <i class="fa fa-whatsapp my-float"></i>
     </a>
 
